--- a/Read/ReadAndroidWiki/07.Window/18.窗口管理服务WMS.md
+++ b/Read/ReadAndroidWiki/07.Window/18.窗口管理服务WMS.md
@@ -13,8 +13,7 @@
 - Android窗口管理从窗口的创建到UI的绘制主要涉及以下角色：
     - WindowManager：应用与窗口管理服务WindowManagerService交互的接口
     - WindowManagerService：窗口管理服务，继承于IWindowManager.Stub，是Binder的服务端，该服务运行在一个单独的进程中，因此WindowManager与WindowManagerService的交互也是一个IPC的过程。
-    - SurfaceFlinger：SurfaceFlinger服务运行在Android系统的System进程中，它负责管理Android系统的帧缓冲区（Frame Buffer)，Android设备的显示屏被抽象为一个
-    帧缓冲区，而Android系统中的SurfaceFlinger服务就是通过向这个帧缓冲区写入内容来绘制应用程序的用户界面的。
+    - SurfaceFlinger：SurfaceFlinger服务运行在Android系统的System进程中，它负责管理Android系统的帧缓冲区（Frame Buffer)，Android设备的显示屏被抽象为一个帧缓冲区，而Android系统中的SurfaceFlinger服务就是通过向这个帧缓冲区写入内容来绘制应用程序的用户界面的。
     - Surface：每个显示界面的窗口都是一个Surface。
     - PhoneWindowManager：实现了窗口的各种策略。
     - Choreographer：用于控制窗口动画、屏幕旋转等操作。
