--- a/Read/ReadJavaWiki/04.数据结构/17.ConcurrentHashMap1.md
+++ b/Read/ReadJavaWiki/04.数据结构/17.ConcurrentHashMap1.md
@@ -9,7 +9,9 @@
 
 ### 01.HashMap和HashTable困境
 #### 1.1 效率低下的HashTable容器
-- HashTable容器使用synchronized来保证线程安全，但在线程竞争激烈的情况下HashTable的效率非常低下。因为当一个线程访问HashTable的同步方法时，其他线程访问HashTable的同步方法时，可能会进入阻塞或轮询状态。如线程1使用put进行添加元素，线程2不但不能使用put方法添加元素，并且也不能使用get方法来获取元素，所以竞争越激烈效率越低。
+- HashTable容器使用synchronized来保证线程安全，但在线程竞争激烈的情况下HashTable的效率非常低下。
+    - 因为当一个线程访问HashTable的同步方法时，其他线程访问HashTable的同步方法时，可能会进入阻塞或轮询状态。
+    - 如线程1使用put进行添加元素，线程2不但不能使用put方法添加元素，并且也不能使用get方法来获取元素，所以竞争越激烈效率越低。
 - Java中其实已经有了HashTable这个线程安全的Map，但是他是通过对整个table使用synchronized来保证线程安全的，当有多个线程对HashTable进行读写的时候，每次只能有一个线程会获取到HashTable的对象锁，别的只能处于等待状态，所以在高并发的情况下，它的效率是比较低的。
 
 
@@ -27,7 +29,8 @@
         }).start();
     }
     ```
-- 解决方案有Hashtable和Collections.synchronizedMap(hashMap)，不过这两个方案基本上是对读写进行加锁操作，一个线程在读写元素，其余线程必须等待，性能可想而知。[博客](https://github.com/yangchong211/YCBlogs)
+- 解决方案有Hashtable和Collections.synchronizedMap(hashMap)
+    - 不过这两个方案基本上是对读写进行加锁操作，一个线程在读写元素，其余线程必须等待，性能可想而知。[博客](https://github.com/yangchong211/YCBlogs)
 
 
 
