--- a/Read/ReadJavaWiki/09.反射知识/06.JVM实现反射细节.md
+++ b/Read/ReadJavaWiki/09.反射知识/06.JVM实现反射细节.md
@@ -706,8 +706,10 @@
 
 
 ### 04.反射调用的开销
-- 在刚才的例子中，我们先后进行了Class.forName,Class.getMethod以及Method.invoke三个操作。其中Class.forName会调用本地方法，Class.getMethod则会遍历该类的共有方法。如果没有匹配到，它还将遍历父类的公有方法。可想而知，这两个操作都非常费时。
-- 值得注意的是，以getMethod为代表的查找方法操作，会返回查找得到结果的一份拷贝。因此，我们应当避免在热点代码中使用返回Method数组的getMethods 或者 getDeclaredMethods方法，以减少不必要的堆空间消耗。。
+- 在刚才的例子中，我们先后进行了Class.forName,Class.getMethod以及Method.invoke三个操作。
+    - 其中Class.forName会调用本地方法，Class.getMethod则会遍历该类的共有方法。如果没有匹配到，它还将遍历父类的公有方法。可想而知，这两个操作都非常费时。
+- 值得注意的是，以getMethod为代表的查找方法操作，会返回查找得到结果的一份拷贝。
+    - 因此，我们应当避免在热点代码中使用返回Method数组的getMethods 或者 getDeclaredMethods方法，以减少不必要的堆空间消耗。。
 - 在实践中，我们往往会在应用程序中缓存Class.forName和Class.getMethod的结果。因此，下面我们就只关注反射调用本身的性能开销。
 - 为了比较直接调用和反射调用的性能差距，我们将前面的例子改为下面的v2版本。它将会反射调用循环二十亿次。此外，它还将记录下没跑一亿次的时间。
 - 我们取最后五个记录的平均值，作为预热后的峰值性能。（注：这种性能评估并不严谨）
