--- a/Read/ReadMeWiki/00.方案实践/16.内存治理优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/16.内存治理优化实践.md
@@ -15,6 +15,7 @@
 - 04.其他优化治理
     - 4.7 ComponentCallback优化
     - 4.8 四种引用优化
+    - 4.9 关于log日志
 - 方案设计
     - 整体架构
         - 架构设计图
@@ -217,6 +218,17 @@
     - 还有就是可以根据对象是否经常使用来判断。如果该对象可能会经常使用的，就尽量用软引用。如果该对象不被使用的可能性更大些，就可以用弱引用。
 
 
+
+
+#### 4.9 关于log日志
+- log 方法内存开销过大。建议这个方法 建议 Debug 进入执行 ，但是正是包不执行，因为 object 会进行字符串+拼接，产生大量内存对象。
+```
+public static void d(Object object){
+    //这个方法 建议 Debug 进入执行 ，但是正是包不执行，因为 object 会进行字符串+拼接，产生大量内存对象。
+    //Log.d(TAG, object.toString());
+    Log.d(TAG, " log : " + object);
+}
+```
 
 
 ### 01.概述
