--- a/Read/ReadMeWiki/00.方案实践/37.IPC跨进程通信实践.md
+++ b/Read/ReadMeWiki/00.方案实践/37.IPC跨进程通信实践.md
@@ -89,13 +89,16 @@
     - *AIDL* ，AIDL 接口本身也可以在 AIDL 文件中使用。
 - 如何使用
     - 服务端创建一个 Service 用来监听客户端的连接请求，然后创建一个 AIDL 文件，将暴露给客户端的接口在这个 AIDL 文件中声明，最后在 Service 中实现这个 AIDL 接口即可。
-    - 绑定服务端的 Service ，绑定成功后，将服务端返回的 Binder 对象转成 AIDL 接口所属的类型，然后就可以调用 AIDL 中的方法了。客户端调用远程服务的方法，被调用的方法运行在服务端的 Binder 线程池中，同时客户端的线程会被挂起，如果服务端方法执行比较耗时，就会导致客户端线程长时间阻塞，导致 ANR 。客户端的 onServiceConnected 和 onServiceDisconnected 方法都在 UI 线程中。
+    - 绑定服务端的 Service ，绑定成功后，将服务端返回的 Binder 对象转成 AIDL 接口所属的类型，然后就可以调用 AIDL 中的方法了。
+    - 户端调用远程服务的方法，被调用的方法运行在服务端的 Binder 线程池中，同时客户端的线程会被挂起，如果服务端方法执行比较耗时，就会导致客户端线程长时间阻塞，导致 ANR 。
+    - 客户端的 onServiceConnected 和 onServiceDisconnected 方法都在 UI 线程中。
 
 
 #### 2.5 使用ContentProvider
 - 用于不同应用间数据共享，和 Messenger 底层实现同样是 Binder 和 AIDL，系统做了封装，使用简单。
 - 系统预置了许多 ContentProvider ，如通讯录、日程表，图片等，需要跨进程访问。
     - 使用方法：继承 ContentProvider 类实现 6 个抽象方法，这六个方法均运行在 ContentProvider 进程中，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
+
 
 
 #### 2.6 使用Socket
