--- a/Read/ReadJavaWiki/07.Java并发/11.volatile原理深度分析.md
+++ b/Read/ReadJavaWiki/07.Java并发/11.volatile原理深度分析.md
@@ -24,6 +24,7 @@
 
 
 
+
 ### 01.快速了解volatile
 #### 1.1 先看一个简单案例
 - 举个简单的例子：在java中，执行下面这个语句：
@@ -421,7 +422,7 @@
         flag = true;
     }
      ```
-    - **②.单例模式中的double check**
+- **②.单例模式中的double check**
     ``` 
     class Singleton {
         private volatile static Singleton instance = null;
@@ -446,7 +447,9 @@
     - 1.给 instance 分配内存
     - 2.调用 Singleton 的构造函数来初始化成员变量
     - 3.将instance对象指向分配的内存空间（执行完这步 instance 就为非 null 了）。
-    - 但是在 JVM 的即时编译器中存在指令重排序的优化。也就是说上面的第二步和第三步的顺序是不能保证的，最终的执行顺序可能是 1-2-3 也可能是 1-3-2。如果是后者，则在 3 执行完毕、2 未执行之前，被线程二抢占了，这时 instance 已经是非 null 了（但却没有初始化），所以线程二会直接返回 instance，然后使用，然后顺理成章地报错。
+- 但是在 JVM 的即时编译器中存在指令重排序的优化。
+    - 也就是说上面的第二步和第三步的顺序是不能保证的，最终的执行顺序可能是 1-2-3 也可能是 1-3-2。
+    - 如果是后者，则在 3 执行完毕、2 未执行之前，被线程二抢占了，这时 instance 已经是非 null 了（但却没有初始化），所以线程二会直接返回 instance，然后使用，然后顺理成章地报错。
 
 
 
