完善一些知识笔记

--- a/Read/ReadJavaWiki/05.Java异常/03.JVM处理异常解析.md
+++ b/Read/ReadJavaWiki/05.Java异常/03.JVM处理异常解析.md
@@ -28,7 +28,8 @@
 
 
 #### 1.3 异常构造昂贵
-- 这是由于在构造异常实例时，Java虚拟机便需要生成该异常的栈轨迹（stack trace）。该操作会逐一访问当前线程的Java栈帧，并且记录下各种调试信息，包括栈帧所指向的方法的名字，方法所在的类名、文件名，以及在代码中的第几行触发该异常。
+- 这是由于在构造异常实例时，Java虚拟机便需要生成该异常的栈轨迹（stack trace）。
+    - 该操作会逐一访问当前线程的Java栈帧，并且记录下各种调试信息，包括栈帧所指向的方法的名字，方法所在的类名、文件名，以及在代码中的第几行触发该异常。
 - 当然，在生成栈轨迹时，Java虚拟机会忽略掉异常构造器以及填充栈帧的Java方法（Throwable.fillInStackTrace）,直接从新建异常位置开始算起。此外，Java虚拟机还会忽略标记为不可见的Java方法栈帧。
 - 既然异常实例的构造十分昂贵，我们是否可以缓存异常实例，在需要用到的时候直接抛出呢？从语法角度上来看，这是允许的。然而，该异常对应的栈轨迹并非throw语句的位置，而是新建异常的位置。因此，这种做法可能会误导开发人员，使其定位到错误的位置。这也是为什么在实践中，我们往往选择抛出新建异常实例的原因。
 
@@ -372,7 +373,7 @@
 
 #### 6.2 栈轨迹如何形成
 - 构造异常实例时，Java虚拟机便需要生成该异常的栈轨迹（stack trace）。
-- 该操作会逐一访问当前线程的Java栈帧，并且记录下各种调试信息，包括栈帧所指向的方法的名字，方法所在的类名、文件名，以及在代码中的第几行触发该异常。
+    - 该操作会逐一访问当前线程的Java栈帧，并且记录下各种调试信息，包括栈帧所指向的方法的名字，方法所在的类名、文件名，以及在代码中的第几行触发该异常。
 
 
 
