--- a/Read/ReadJavaWiki/06.线程知识/10.线程优先级和调度.md
+++ b/Read/ReadJavaWiki/06.线程知识/10.线程优先级和调度.md
@@ -17,7 +17,7 @@
 
 #### 2.2 线程有两种调度模型
 - **分时调度模型** 	
-    - 所有线程轮流使用CPU的使用权，平均分配每个线程占用 CPU 的时间片
+    - 所有线程轮流使用CPU的使用权，平均分配每个线程占用 CPU 的时间片。
 - **抢占式调度模型**
     - 优先让优先级高的线程使用 CPU，如果线程的优先级相同，那么会随机选择一个，优先级高的线程获取的 CPU 时间片相对多一些。Java使用的是抢占式调度模型。[博客](https://github.com/yangchong211/YCBlogs)
 
@@ -25,7 +25,8 @@
 
 
 ## 01.什么是优先级
-- 线程调度程序根据线程优先级来决定每个线程应当何时运行。理论上，优先级高的线程比优先级低的线程会获得更多的CPU时间。但是，线程优先级不能保证线程执行的顺序，而且优先级设置也根据运行平台会有不同的表现
+- 线程调度程序根据线程优先级来决定每个线程应当何时运行。
+    - 理论上，优先级高的线程比优先级低的线程会获得更多的CPU时间。但是，线程优先级不能保证线程执行的顺序，而且优先级设置也根据运行平台会有不同的表现
 
 
 
