--- a/Read/ReadJavaWiki/07.Java并发/09.final关键字原理.md
+++ b/Read/ReadJavaWiki/07.Java并发/09.final关键字原理.md
@@ -355,7 +355,8 @@
 
 ### 06.final域重排序简介
 - 关于final修饰类，方法，变量等等，应该属于**Java基础层面**的，当理解这些后就真的算是掌握了final吗？有考虑过final在多线程并发的情况吗？
-- java内存模型为了能让处理器和编译器底层发挥他们的最大优势，对底层的约束就很少，也就是说针对底层来说java内存模型就是一弱内存数据模型。同时，处理器和编译为了性能优化会对指令序列有**编译器和处理器重排序**。那么，在多线程情况下,final会进行怎样的重排序？会导致线程安全的问题吗？
+- java内存模型为了能让处理器和编译器底层发挥他们的最大优势，对底层的约束就很少，也就是说针对底层来说java内存模型就是一弱内存数据模型。
+- 同时，处理器和编译为了性能优化会对指令序列有**编译器和处理器重排序**。那么，在多线程情况下,final会进行怎样的重排序？会导致线程安全的问题吗？
 
 
 ### 07.final域为基本类型
@@ -465,7 +466,8 @@
 
 
 ### 10.final的实现原理
-- 写final域会要求编译器在final域写之后，构造函数返回前插入一个StoreStore屏障。读final域的重排序规则会要求编译器在读final域的操作前插入一个LoadLoad屏障。
+- 写final域会要求编译器在final域写之后，构造函数返回前插入一个StoreStore屏障。
+    - 读final域的重排序规则会要求编译器在读final域的操作前插入一个LoadLoad屏障。
 - 很有意思的是，如果以X86处理为例，X86不会对写-写重排序，所以**StoreStore屏障可以省略**。由于**不会对有间接依赖性的操作重排序**，所以在X86处理器中，读final域需要的**LoadLoad屏障也会被省略掉**。也就是说，**以X86为例的话，对final域的读/写的内存屏障都会被省略**！具体是否插入还是得看是什么处理器
 
 
