--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -197,7 +197,7 @@ APUS          上午10点-11点，面试超时，问了说二面再确定时间
 长城汽车            下午2点-3点，复试
 Apus              下午3点半-4点半，复试
 作业帮             下午5点面试
-滴滴造车达芬奇       晚上7点-8点
+滴滴造车达芬奇       晚上7点-8点，一面过
 
 
 3月21日周一
