完善一些笔记

--- a/Read/ReadJavaWiki/02.类和对象/06.接口而非实现编程.md
+++ b/Read/ReadJavaWiki/02.类和对象/06.接口而非实现编程.md
@@ -9,7 +9,8 @@
 
 
 ### 01.编程原则
-- 基于接口而非实现编程。这个原则非常重要，是一种非常有效的提高代码质量的手段，在平时的开发中特别经常被用到。
+- 基于接口而非实现编程。
+    - 这个原则非常重要，是一种非常有效的提高代码质量的手段，在平时的开发中特别经常被用到。
 
 
 
