--- a/Read/ReadJavaWiki/08.类的加载/03.类初始化操作分析.md
+++ b/Read/ReadJavaWiki/08.类的加载/03.类初始化操作分析.md
@@ -5,6 +5,9 @@
     - 1.3 构造器用于初始化
 - 02.方法重载
 - 03.this关键字说明
+    - 3.1 表示当前对象引用
+    - 3.2 表示类的成员变量
+    - 3.3 调用另一个构造器
 - 04.成员初始化
     - 4.1 初始化的顺序
     - 4.2 初始化说明和案例
@@ -58,6 +61,12 @@
 
 ### 03.this关键字说明
 - this关键字也是Java中尤为重要的一个关键字，主要有三个作用：
+    - 1.表示当前对象的引用，并返回当前对象
+    - 2.在有的构造函数中，形参与成员变量使用同一个字符串，这时候可以用this来区分，带有this的表示成员变量
+    - 3.使用this带参数代替构造器的方法名，在构造器中调用构造器。有时候为了一个类写了多个构造器。有时候可能想在一个构造器中调用另一个构造器，以避免重复代码。可用this关键字做到这一点。
+
+
+#### 3.1 表示当前对象引用
 - 1.表示当前对象的引用，并返回当前对象，用法如下：
     - doFunc（）方法返回的是一个ThisTest类型的值，所以此处使用return this，返回了该类型对象的引用。
     ``` java
@@ -70,8 +79,11 @@
     	}
     }
     ```
-- 2.表示类的成员变量
-    - 在有的构造函数中，形参与成员变量使用同一个字符串，这时候可以用this来区分，带有this的表示成员变量，用法如下：
+
+
+
+#### 3.2 表示类的成员变量
+- 在有的构造函数中，形参与成员变量使用同一个字符串，这时候可以用this来区分，带有this的表示成员变量，用法如下：
     ``` java
     public class ThisTest{
     	private String arg;
@@ -84,6 +96,9 @@
     	}
     }
     ```
+
+
+#### 3.3 调用另一个构造器
 - 3.可以在构造器中调用另一个构造器
     - 使用this带参数代替构造器的方法名，在构造器中调用构造器。有时候为了一个类写了多个构造器。有时候可能想在一个构造器中调用另一个构造器，以避免重复代码。可用this关键字做到这一点。用法如下：
     ```java
