--- a/Read/ReadJavaWiki/12.Java深入/06.Lambda表达式介绍.md
+++ b/Read/ReadJavaWiki/12.Java深入/06.Lambda表达式介绍.md
@@ -180,7 +180,7 @@
     ```
 - 使用了面向对象的编程方法虽然使得逻辑结构更为清晰，具体的需求由特定的类来完成筛选，使用匿名类使代码也相对简洁了些，但这样依然会导致出现大量的重复代码。
     - 重复的代码有：
-        ```
+        ``` java
         new Filter() {
             @Override
             public boolean filter(Student student) {
@@ -189,7 +189,7 @@
         });
         ```
     - 不重复的代码是：
-        ```
+        ``` java
         student.getName().startsWith("小杨");
         student.getAge() > 18;
         ```
