--- a/Read/ReadMeWiki/00.方案实践/01.组件化开发优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.组件化开发优化实践.md
@@ -7,9 +7,12 @@
     - 1.5 设计目标
 - 02.以前架构
     - 2.1 以前App说明
+    - 2.2 多人协作开发
+    - 2.3 迭代回归测试
 - 03.组件化准备
     - 3.1 组件化需要考虑问题
     - 3.2 分类拆分模块
+    - 3.6 application和library
 - 04.组件化注意坑
     - 4.6 关于依赖优化
     - 4.7 三方sdk拆分问题
@@ -36,13 +39,15 @@
 - APP迭代维护成本增高
     - 投资界，新芽，项目工厂等APP自身在飞速发展，版本不断迭代，新功能不断增加，业务模块数量不断增加，业务上的处理逻辑越变越复杂，同时每个模块代码也变得越来越多，这就引发一个问题，所维护的代码成本越来越高，稍微一改动可能就牵一发而动全身，改个小的功能点就需要回归整个APP测试，这就对开发和维护带来很大的挑战。
 - 多人组合需要组件化
-    - APP 架构方式是单一工程模式，业务规模扩大，随之带来的是团队规模扩大，那就涉及到多人协作问题，每个移动端软件开发人员势必要熟悉如此之多代码，如果不按照一定的模块组件机制去划分，将很难进行多人协作开发，随着单一项目变大，而且Andorid项目在编译代码方面就会变得非常卡顿，在单一工程代码耦合严重，每修改一处代码后都需要重新编译打包测试，导致非常耗时。
+    - APP 架构方式是单一工程模式，业务规模扩大，随之带来的是团队规模扩大，那就涉及到多人协作问题，每个移动端软件开发人员势必要熟悉如此之多代码，如果不按照一定的模块组件机制去划分，将很难进行多人协作开发，随着单一项目变大，在单一工程代码耦合严重，每修改一处代码后都需要重新编译打包测试，导致非常耗时。
 
 
 #### 1.2 遇到问题
-- 结合投资界，新芽客户端分析
-    - 代码量膨胀，不利于维护，不利于新功能的开发。项目工程构建速度慢，在一些电脑上写两句代码，重新编译整个项目，测试的话编译速度起码 10-20 分钟，有的甚至更长。
-    - 不同模块之间代码耦合严重，有时候修改一处代码而牵动许多模块。每个模块之间都有引用第三方库，但有些第三方库版本不一致，导致打包APP时候代码冗余，容易引起版本冲突。
+- 代码量膨胀，不利于维护，不利于新功能的开发。
+    - 项目工程构建速度慢，在一些电脑上写两句代码，重新编译整个项目，测试的话编译速度起码 10-20 分钟，有的甚至更长。
+- 不同模块之间代码耦合严重，有时候修改一处代码而牵动许多模块。
+    - 每个模块之间都有引用第三方库，但有些第三方库版本不一致，导致打包APP时候代码冗余，容易引起版本冲突。
+- 代码历史遗留问题
     - 现有项目基于以前其他人项目基础上开发，经手的人次过多，存在着不同的代码风格，项目中代码规范乱，类似的功能写法却不一样，导致不统一。
 
 
@@ -52,7 +57,8 @@
     - 组件化是基于组件可重用的目的上，将一个大的软件系统按照分离关注点的形式，拆分成多个独立的组件，使得整个软件系统也做到电路板一样，是单个或多个组件元件组装起来，哪个组件坏了，整个系统可继续运行，而不出现崩溃或不正常现象，做到更少的耦合和更高的内聚。
 - 模块化和组件化区别
     - 模块化就是将一个程序按照其功能做拆分，分成相互独立的模块，以便于每个模块只包含与其功能相关的内容，模块我们相对熟悉，比如登录功能可以是一个模块，搜索功能可以是一个模块等等。
-    - 组件化就是更关注可复用性，更注重关注点分离，如果从集合角度来看的话，可以说往往一个模块包含了一个或多个组件，或者说模块是一个容器，由组件组装而成。简单来说，组件化相比模块化粒度更小，两者的本质思想都是一致的，都是把大往小的方向拆分，都是为了复用和解耦，只不过模块化更加侧重于业务功能的划分，偏向于复用，组件化更加侧重于单一功能的内聚，偏向于解耦。
+    - 组件化就是更关注**可复用性**，更注重关注点**分离**，如果从集合角度来看的话，可以说往往一个模块包含了一个或多个组件，或者说模块是一个容器，由组件组装而成。
+    - 简单来说，组件化相比模块化粒度更小，两者的本质思想都是一致的，都是把大往小的方向拆分，都是为了复用和解耦，只不过模块化更加侧重于业务功能的划分，偏向于复用，组件化更加侧重于单一功能的内聚，偏向于解耦。
 - 组件化和插件化的区别
     - 组件化不是插件化，插件化是在【运行时】，而组件化是在【编译时】。换句话说，插件化是基于多APK的，而组件化本质上还是只有一个 APK。
     - 组件化和插件化的最大区别（应该也是唯一区别）就是组件化在运行时不具备动态添加和修改组件的功能，但是插件化是可以的。
@@ -74,28 +80,14 @@
 - 6.定制项目可按需加载，组件之间可以灵活组建，快速生成不同类型的定制产品。
 
 
+
 #### 1.5 设计目标
 - 组件化的目标
     - 组件化的目标之一就是降低整体工程（app）与组件的依赖关系，缺少任何一个组件都是可以存在并正常运行的。app主工程具有和组件进行绑定和解绑的功能。
+- 对组件化层次划分
+    - 需要结构清晰，拆分粒度符合设计规范。方便迁移，按需加载。
 
 
-
-#### 2.5 application和library
-- 在studio中，对两种module进行区分，如下所示
-    - 一种是基础库library，比如常见第三方库都是lib，这些代码被其他组件直接引用。
-    - 另一种是application，也称之为Component，这种module是一个完整的功能模块。比如分享module就是一个Component。
-    - 为了方便，统一把library称之为依赖库，而把Component称之为组件，下面所讲的组件化也主要是针对Component这种类型。
-- 在项目的build.gradle文件中
-    ```
-    //控制组件模式和集成模式
-    if (rootProject.ext.isDouBanApplication) {
-        //是Component，可以独立运行
-        apply plugin: 'com.android.application'
-    } else {
-        //是lib，被依赖
-        apply plugin: 'com.android.library'
-    }
-    ```
 
 
 
@@ -145,10 +137,29 @@
     - 最上层的业务，每个组件表示一条完整的业务线，彼此之间互相独立。原则上来说：各个业务组件之间不能有直接依赖！所有的业务组件均需要可以做到独立运行的效果。对于测试的时候，需要依赖多个业务组件的功能进行集成测试的时候。可以使用app壳进行多组件依赖管理运行。
     - 该案例中分为：干活集中营，玩Android，知乎日报，微信新闻，头条新闻，搞笑视频，百度音乐，我的记事本，豆瓣音乐读书电影，游戏组件等等。
 - 功能组件：
-    - 该案例中分为，分享组件，评论反馈组件，支付组件，画廊组件等等。同时注意，可能会涉及多个业务组件对某个功能组件进行依赖！
+    - 该案例中分为，登录注册组件，分享组件，评论反馈组件，支付组件，画廊组件等等。同时注意，可能会涉及多个业务组件对某个功能组件进行依赖！
 - 基础组件：
     - 支撑上层业务组件运行的基础业务服务。此部分组件为上层业务组件提供基本的功能支持。
     - 该案例中：在基础组件库中主要有，网络请求，图片加载，通信机制，工具类，分享功能，支付功能等等。当然，我把一些公共第三方库放到了这个基础组件中！
+
+
+
+#### 3.6 application和library
+- 在studio中，对两种module进行区分，如下所示
+    - 一种是基础库library，比如常见第三方库都是lib，这些代码被其他组件直接引用。
+    - 另一种是application，也称之为Component，这种module是一个完整的功能模块。比如分享module就是一个Component。
+    - 为了方便，统一把library称之为依赖库，而把Component称之为组件，下面所讲的组件化也主要是针对Component这种类型。
+- 在项目的build.gradle文件中
+    ```
+    //控制组件模式和集成模式
+    if (rootProject.ext.isDouBanApplication) {
+        //是Component，可以独立运行
+        apply plugin: 'com.android.application'
+    } else {
+        //是lib，被依赖
+        apply plugin: 'com.android.library'
+    }
+    ```
 
 
 
@@ -159,7 +170,7 @@
     ```
 - 关于依赖说明
     - implementation：
-        - 只能在内部使用此模块，比如我在一个library中使用implementation依赖了gson库，然后我的主项目依赖了libiary，那么，我的主项目就无法访问gson库中的方法。这样的好处是编译速度会加快，推荐使用implementation的方式去依赖
+        - 只能在内部使用此模块，比如我在一个library中使用implementation依赖了gson库，然后我的主项目依赖了library，那么，我的主项目就无法访问gson库中的方法。这样的好处是编译速度会加快，推荐使用implementation的方式去依赖
     - compile（api）
         - 这种是我们最常用的方式，使用该方式依赖的库将会参与编译和打包。 
     - compileOnly
@@ -228,16 +239,7 @@
     }
     
     android {
-        compileSdkVersion rootProject.ext.android["compileSdkVersion"]
-        buildToolsVersion rootProject.ext.android["buildToolsVersion"]
-    
-    
         defaultConfig {
-            minSdkVersion rootProject.ext.android["minSdkVersion"]
-            targetSdkVersion rootProject.ext.android["targetSdkVersion"]
-            versionCode rootProject.ext.android["versionCode"]
-            versionName rootProject.ext.android["versionName"]
-    
             if (rootProject.ext.isGankApplication){
                 //组件模式下设置applicationId
                 applicationId "com.ycbjie.gank"
@@ -248,20 +250,6 @@
                 }
             }
         }
-    
-        buildTypes {
-            release {
-                minifyEnabled false
-                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            }
-        }
-    
-        //jdk1.8
-        compileOptions {
-            sourceCompatibility JavaVersion.VERSION_1_8
-            targetCompatibility JavaVersion.VERSION_1_8
-        }
-    
         sourceSets {
             main {
                 if (rootProject.ext.isGankApplication) {
@@ -273,12 +261,6 @@
             }
         }
     
-    }
-    
-    dependencies {
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-        implementation project(':library')
-        annotationProcessor rootProject.ext.dependencies["router-compiler"]
     }
     ```
 
@@ -421,7 +403,7 @@
 - 需要注意的地方，这个很重要
     - 首先看看网上绝大多数的作法，非常感谢这些大神的无私奉献！但是我觉得多个组件用一个开关控制也可以，但是sourceSets里面切换成组件app时，可以直接不用下面这么麻烦，可以复用java和res文件。
         - ![image](https://upload-images.jianshu.io/upload_images/4432347-53bc9742746dfdb2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-    - 接下来看看我的做法：
+- 接下来看看我的做法：
     - 下面这个配置十分重要。也就是说当该玩Android组件从library切换到application时，由于可以作为独立app运行，所以序意设置applicationId，并且配置清单文件，如下所示！
     - 在 library 和 application 之间切换，manifest文件也需要提供两套
     ```
@@ -598,50 +580,32 @@
 
 
 
-#### 5.3 使用Arouter注意事项
+#### 5.3 使用ARouter注意事项
 - 使用阿里路由抽取工具类，方便后期维护！
-    - 首先看一下网络上有一种写法。
-        ```
-        //首先通过注解添加下面代码
-        @Route(path = "/test/TestActivity")
-        public class TestActivity extends BaseActivity {
-        
-        }
-        
-        //跳转
-        ARouter.getInstance().inject("/test/TestActivity");
-        ```
-    - 优化后的写法
-        - 下面这种做法，是方便后期维护。
-        ```
-        //存放所有的路由路径常量
-        public class ARouterConstant {
-            //跳转到视频页面
-            public static final String ACTIVITY_VIDEO_VIDEO = "/video/VideoActivity";
-            //省略部分diamagnetic
-        }
-        
-        //存放所有的路由跳转，工具类
-        public class ARouterUtils {
-            /**
-             * 简单的跳转页面
-             * @param string                string目标界面对应的路径
-             */
-            public static void navigation(String string){
-                if (string==null){
-                    return;
-                }
-                ARouter.getInstance().build(string).navigation();
-            }
-        }
-        
-        //调用
-        @Route(path = ARouterConstant.ACTIVITY_VIDEO_VIDEO)
-        public class VideoActivity extends BaseActivity {
-        
-        }
-        ARouterUtils.navigation(ARouterConstant.ACTIVITY_VIDEO_VIDEO);
-        ```
+- 首先看一下网络上有一种写法。
+    ```
+    //首先通过注解添加下面代码
+    @Route(path = "/test/TestActivity")
+    public class TestActivity extends BaseActivity {
+    
+    }
+    //跳转
+    ARouter.getInstance().inject("/test/TestActivity");
+    ```
+- 优化后的写法。下面这种做法，是方便后期维护。
+    ```
+    //存放所有的路由路径常量
+    public class ARouterConstant {
+        //跳转到视频页面
+        public static final String ACTIVITY_VIDEO_VIDEO = "/video/VideoActivity";
+    }
+    //调用
+    @Route(path = ARouterConstant.ACTIVITY_VIDEO_VIDEO)
+    public class VideoActivity extends BaseActivity {
+    
+    }
+    ARouterUtils.navigation(ARouterConstant.ACTIVITY_VIDEO_VIDEO);
+    ```
 
 
 
