--- a/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
+++ b/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
@@ -13,6 +13,7 @@
     - 2.1 四大组件
     - 2.2 Binder机制
     - 2.3 View原理
+    - 2.4 消息机制
     - 2.5 注解
     - 2.7 事件分发
     - 2.8 多线程
@@ -73,12 +74,14 @@
 #### 1.5 异常处理
 - 【异常】Exception和Error有什么区别？运行时异常与一般异常有什么区别？
 - 【异常捕获】try {}里有一个 return 语句，那么紧跟在这个 try 后的 finally {}里的code会不会被执行，什么时候被执行，在 return 前还是后?
+- 【异常性能】try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
 
 
 
 
 #### 1.6 多线程
 - 【多线程】多线程具有什么优点和缺点？为什么说开启大量的线程,会降低程序的性能，那么该如何做才能降低性能？
+- 【线程】ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
 
 
 #### 1.7 并发知识
@@ -91,12 +94,15 @@
 - 【类加载机制】Person p = new Person()请写一下类的加载过程？在加载过程分别对Person类中的常量，变量，构造方法，成员方法做了什么处理？
 - 【GC机制】垃圾回收机制的原理是什么？这一块主要是了解是否对java虚拟机有了解……
 - 【四种引用】说一下四中引用的区别和使用场景，什么情况下会导致应用内存空间不足？弱引用和软引用有什么区别？
-
+- 【加载器】什么是类加载器？类加载器工作机制是什么？类加载器种类？平常是怎么使用ClassLoader加载类的，说一下原理？
+- 什么时候发生类初始化？类初始化后对类的做了什么，加载变量，常量，方法都内存那个位置？
+- 【内存】说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
 
 
 #### 1.9 反射知识
 - 【反射】如何防止反射序列化攻击单例？反射中有个暴力访问权限方法，这个方法怎么实现的？如何避免发射攻击？
 - 【反射】什么是反射机制？反射机制的优缺点？通过设置setAccessible(true)暴力访问权限有什么危害？
+- 【反射】反射为何损耗性能，从jvm层面说一下你的看法？
 
 
 
@@ -108,6 +114,7 @@
 - 【Activity组件】Activity启动模式有哪些？具体说一下使用场景，并绘制进出栈的图形？从非activity中开启activity为什么要添加flag，不添加会出现什么问题？
 - 【BroadcastReceive】广播有哪些注册方式？有什么区别？广播发送和接收原理是什么[binder如何运作的]？
 - 【Activity】Activity如何与window和view进行分工合作的，它们之间是怎么链接起来的，说一下工作原理？
+- 【wms】如果让你实现一个桌面级悬浮窗，你该怎么设计，从WMS层面思考如何view是如何加载到窗口上的
 
 
 
@@ -121,6 +128,11 @@
 - 【View】requestLayout()、invalidate()与postInvalidate()有什么区别？说一下刷新原理和流程？
 - 【SurfaceView】SurfaceView与View有何区别？SurfaceView为何不会造成卡顿？SurfaceView替换方案怎么做？
 - 【View绘制】View的绘制过程都是用的同一个canvas吗？canvas是怎么创建的，有做过复用的操作吗？
+- 【帧缓存】平常有做过那些UI优化，知道帧缓存吗，说下对SurfaceFlinger理解
+
+
+#### 2.4 消息机制
+- 【消息机制】说一下什么场景会出现消息队列阻塞，发送消息很多时该如何优化，异步消息会阻塞线程吗
 
 
 #### 2.8 多线程
@@ -134,7 +146,7 @@
 #### 2.9 控件原理
 - 【状态管理】怎么做状态管理，ViewStub为何没大小，是怎么做懒加载的？为什么inflate只能是布局而不能是view？加载包含merge标签布局会怎样？
 - 【弹窗】Android添加弹窗崩溃(WindowManager$BadTokenException: Unable to add window)是什么原因造成的？为何dialog要添加在Activity上？
-
+- 【302】webView如何做重定向优化的，js交互注意事项有哪些？
 
 
 ### 03.Http网络
@@ -185,32 +197,24 @@
 ### 06.算法知识
 #### 6.1 算法面试题
 - 【二叉树】了解二叉树的遍历么？讲一讲他们。那个数据结构用到了二叉树？有什么可以优化的？
-
+- 【手写代码】写一下生产者和消费者模型代码，一对一，一对多，然后运行代码，10分钟
 
 
 ### 07.其他知识点
 #### 7.1 开放式问题
 - 【综合】App开发中遇到什么很难的困难？怎么解决的，花了多长时间？
 - 【GIF】如何实现一个GIF图片的加载框架，如果是你设计，你该怎么做？
-
-
-
-
-- 【帧缓存】平常有做过那些UI优化，知道帧缓存吗，说下对SurfaceFlinger理解
 - 【glide】如何做一个加载进度的需求，glide可以实现吗？原理大概是什么样的？
-- 【302】webView如何做重定向优化的，js交互注意事项有哪些？
-
-
-
-
-- 【异常性能】try..catch..到底影响性能吗？从jvm层面分析下。在try-catch中for循环和在for循环中try-catch有何区别，性能损耗如何？
-- 【线程】ThreadLocal作用是什么，平常怎么用它，线程为何需要这个东西，里面的副本是怎么拷贝的？
-- 【反射】反射为何损耗性能，从jvm层面说一下你的看法？
-- 【内存】说一下创建对象后，对象的内存布局，平常用到的锁，在内存对象布局哪里，怎么去判断对象中某个方法是否有锁
 - 【开放题】如何去实现app切换到后台1小时自动杀死进程方案，该怎么做
-- 【手写代码】写一下生产者和消费者模型代码，一对一，一对多，然后运行代码，10分钟
-- 【wms】如果让你实现一个桌面级悬浮窗，你该怎么设计，从WMS层面思考如何view是如何加载到窗口上的
-- 【消息机制】说一下什么场景会出现消息队列阻塞，发送消息很多时该如何优化，异步消息会阻塞线程吗
+
+
+
+
+
+
+
+
+
 
 
 
