--- a/Read/ReadMeWiki/00.方案实践/03.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/03.崩溃捕获设计实践.md
@@ -2,8 +2,9 @@
 - 01.整体概述
     - 1.1 项目背景
     - 1.2 遇到问题
-    - 1.3 基础概念
+    - 1.3 基础概念介绍
     - 1.4 设计目标
+    - 1.5 产生收益分析
 - 02.App崩溃流程
     - 2.1 为何崩溃
     - 2.2 Java崩溃流程
@@ -20,6 +21,7 @@
     - 4.1 实现崩溃监听
     - 4.2 处理捕获异常
     - 4.4 崩溃日志收集
+    - 4.7 日志发送邮箱
     - 4.8 崩溃重启实践
 - 05.方案基础设计
     - 5.1 整体架构图
@@ -35,6 +37,7 @@
     - 6.5 异常设计
 - 07.其他说明介绍
     - 7.1 参考链接
+
 
 
 
@@ -89,11 +92,9 @@
     - ActivityManager.getService().handleApplicationCrash-->ActivityManagerService.handleApplicationCrash-->handleApplicationCrashInner方法
 - 从下面可以看出,若传入app为null时,processName就设置为system_server
     ``` java
-    public void handleApplicationCrash(IBinder app,
-            ApplicationErrorReport.ParcelableCrashInfo crashInfo) {
+    public void handleApplicationCrash(IBinder app, ApplicationErrorReport.ParcelableCrashInfo crashInfo) {
         ProcessRecord r = findAppProcess(app, "Crash");
-        final String processName = app == null ? "system_server"
-                : (r == null ? "unknown" : r.processName);
+        final String processName = app == null ? "system_server" : (r == null ? "unknown" : r.processName);
         handleApplicationCrashInner("crash", r, processName, crashInfo);
     }
     ```
@@ -102,9 +103,7 @@
     ``` java
     void handleApplicationCrashInner(String eventType, ProcessRecord r, String processName,
             ApplicationErrorReport.CrashInfo crashInfo) {
-
         addErrorToDropBox(eventType, r, processName, null, null, null, null, null, crashInfo);
-
         mAppErrors.crashApplication(r, crashInfo);
     }
     ```
@@ -225,8 +224,8 @@
     private volatile UncaughtExceptionHandler uncaughtExceptionHandler;
     private static volatile UncaughtExceptionHandler defaultUncaughtExceptionHandler;
     ```
-    - defaultUncaughtExceptionHandler:设置一个静态的默认的UncaughtExceptionHandler。来自所有线程中的Exception在抛出并且未捕获的情况下，都会从此路过。进程fork的时候设置的就是这个静态的defaultUncaughtExceptionHandler，管辖范围为整个进程。
-    - uncaughtExceptionHandler:为单个线程设置一个属于线程自己的uncaughtExceptionHandler，辖范围比较小。
+- defaultUncaughtExceptionHandler:设置一个静态的默认的UncaughtExceptionHandler。来自所有线程中的Exception在抛出并且未捕获的情况下，都会从此路过。进程fork的时候设置的就是这个静态的defaultUncaughtExceptionHandler，管辖范围为整个进程。
+- uncaughtExceptionHandler:为单个线程设置一个属于线程自己的uncaughtExceptionHandler，辖范围比较小。
     ``` java
     //为单个线程设置一个属于线程自己的uncaughtExceptionHandler，捕获单个线程异常。设置后，线程可以完全控制它对未捕获到的异常作出响应的处理。
     thread.setUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
@@ -417,6 +416,8 @@
         1844 ReferenceQueueD
         1869 FinalizerDaemon
         ```
+
+#### 4.7 日志发送邮箱
 
 
 #### 4.8 崩溃重启实践
