--- a/Read/ReadMeWiki/00.方案实践/31.App安全防御大实践.md
+++ b/Read/ReadMeWiki/00.方案实践/31.App安全防御大实践.md
@@ -39,6 +39,34 @@
     - 7.5 异常设计
 
 
+### 01.整体概述
+#### 1.1 项目背景
+
+
+#### 1.2 思考问题
+- 有哪些不安全案例
+    - 代码线程安全，尤其多线程，如果不加锁，容易造成数据错误，引发其他问题
+    - 业务安全，比如短信登录增加滑块校验，避免网络攻击
+    - 代码不规范安全，比如异常日志不要打印重要信息
+    - 传输数据安全，尤其是数据在客户端和服务端传输时，有的不序列化，还要保证有的数据不能被捕获。
+- 逆向解析app案例
+    - 使用xposed工具hook修改代码，反解析app也会造成安全问题。
+
+
+#### 1.3 常见方式
+- 代码安全问题
+    - 这个比较多，下面会挨个举例子
+- 什么是dos攻击
+    - DoS 是一种常见的网络攻击，有人也称其为“洪水攻击”。最常见的表现是，利用大量机器发送请求，将目标网站的带宽或者其他资源耗尽，导致其无法响应正常用户的请求。
+- 反解析apk攻击
+    - 利用xposed攻击apk
+
+
+#### 1.4 设计目标
+
+
+#### 1.5 收益分析
+
 
 ### 02.代码安全例子
 #### 2.1 条件判断代码
