--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -169,10 +169,12 @@
 极客邦        下午5点-6点，一面过
              下午6点-7点，二面过期望35k【boss标记20-35】
 
+
 3月14日周一
 作业帮        下午3点-4点，一面过
 最右          下午5点-6点，一面过
 畅游          晚上7点半-8点半，二面等消息，估计没戏
+
 
 3月15日周二
 VipKid       上午10点-12点，去公司过一二面
@@ -180,50 +182,67 @@ VipKid       上午10点-12点，去公司过一二面
 极客邦        下午5点-6点，砍到30k，需要快速上手jitpack，30k可以发offer
 VipKid       晚上6点半-7点半，三面视频面试，33k，等消息
 
+
 3月16日周三
 APUS          上午10点-11点，面试超时，问了说二面再确定时间
 长城汽车       下午2点-3点，面完了
 开课吧         下午4点-5点
 作业帮         晚上6点半，二面去公司，已经过了
+小米造车       晚上8点-9点，复试，估计挂了
+
 
 3月17日周四
-国美           上午10点到11点，估计挂了，尽是问些数据结构
-货拉拉         上午11点-12点
+国美           上午10点到11点，估计挂了，尽是问些数据结构，太偏底层原理了
+货拉拉         上午11点-12点，一面过
 百度视频       下午2点-4点(去公司，尽量一天搞完)
 开课吧         晚上8点-9点，复试
 
+
 3月18日
 好未来             上午10点-12点
-长城汽车            下午2点-3点，复试
-Apus              下午3点半-4点半，复试
-作业帮             下午5点面试
+长城汽车            下午2点-3点，复试过
+Apus              下午3点半-4点半，复试过
+作业帮             下午5点面试，三面过
 滴滴造车达芬奇       晚上7点-8点，一面过
 
 
 3月21日周一
-货拉拉        下午2点-3点
-好未来        晚上7点-8点
+货拉拉             下午2点-3点，二面过
+长城汽车            下午3点半-4点半，复试
+好未来             晚上7点-8点，去现场
 
 
 3月22日周二
+搜狐视频            上午11点-12点，一面过
+APUS               下午2点-3点，二面过，说还有技术面
+长城               3点半-4点半，人事
+货拉拉              晚上7点-8点，复试
+滴滴造车            晚上8点-9点，达芬奇事业部，二面待定
 
 
 3月23日周三
-领创集团       上午10:30
+百度网盘            下午2点-3点
+领创集团            下午3点-4点半
+国美电商            下午5点-6点
+好未来              下午7点-8点
 
 
-过了两家：作业帮，极客邦，VipKid，开课吧
+3月24日
+汽车之家            下午3点去公司
+国美               晚上5-7点
+知乎               晚上7点
 
 
-1.反射中，可以调用重载的方法吗，从jvm层面说一下
-2.如何理解handler机制中保持空转和唤醒机制
-3.多线程生命周期说下，如何操作才能知道执行run方法中结束
-4.sleep线程后，说下线程的状态流转，为何说阻塞线程，从jvm层面说下
-5.单例模式中的double check，使用volatile修饰对象，为何这样使用
-5.hook机制，如何去修改binder，比如现在做个安全合规操作，需要从AMS层面去全局检测代码，怎么处理
-6.视频播放器拉流过程中，在网络不佳情况下，如何保证视频播放流畅，有哪些手段
-7.MediaCodec发生异常有哪些，说一下你做视频过程中这个异常场景，怎么解决的
-8.h264解码视频像素的过程中，软解码有哪些优化手段
-9.你之前视频播放器封装思路是什么样，不断追问，直接你答不出来为止
+3月25日
+搜狐视频            上午11点-12点，二面
+
+
+过了两家：作业帮，极客邦，VipKid，开课吧，货拉拉
+
+23号
+爱康国宾体检
+24号
+入职体检
+
 
 
