--- a/Read/ReadJavaWiki/04.数据结构/08.HashMap问题思考.md
+++ b/Read/ReadJavaWiki/04.数据结构/08.HashMap问题思考.md
@@ -442,7 +442,8 @@
     - 只有当数组长度为2的幂次方时，h&(length-1)才等价于h%length，即实现了key的定位，2的幂次方也可以减少冲突次数，提高HashMap的查询效率；[博客](https://github.com/yangchong211/YCBlogs)
     - 如果 length 为 2 的次幂 则 length-1 转化为二进制必定是 11111……的形式，在于 h 的二进制与操作效率会非常的快，而且空间不浪费；如果 length 不是 2 的次幂，比如 length 为 15，则 length - 1 为 14，对应的二进制为 1110，在于 h 与操作，最后一位都为 0 ，而 0001，0011，0101，1001，1011，0111，1101 这几个位置永远都不能存放元素了，空间浪费相当大，更糟的是这种情况中，数组可以使用的位置比数组长度小了很多，这意味着进一步增加了碰撞的几率，减慢了查询的效率！这样就会造成空间的浪费。
 
-
+- 优秀文章
+- https://juejin.cn/post/7077363148281348126
 
 
 ### 其他介绍
