--- a/Read/ReadMeWiki/00.方案实践/11.App网络优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/11.App网络优化实践.md
@@ -13,6 +13,9 @@
     - 3.1 HTTPDNS优化
     - 3.2 连接复用
     - 3.3 传输数据压缩
+    - 3.4 IP之恋
+    - 3.5 CDN
+    - 3.6 Http2
 - 04.一些常见优化
     - 4.6 图片网络优化
     - 4.9 获取网络数据优化
