--- a/Read/ReadMeWiki/00.方案实践/05.Crash治理优化总结.md
+++ b/Read/ReadMeWiki/00.方案实践/05.Crash治理优化总结.md
@@ -444,7 +444,7 @@
     - 如果主线程发生了异常，就会退出循环，意味着APP崩溃，所以我们我们需要进行try-catch，避免APP退出，我们可以在主线程再启动一个 Looper.loop() 去执行主线程任务，然后try-catch这个Looper.loop()方法，就不会退出。
 
 
-### 04.拦截主线程崩溃
+#### 8.4 拦截主线程崩溃
 - 拦截主进程崩溃其实也有一定的弊端，因为给用户的感觉是点击没有反应，因为崩溃已经被拦截了。如果是Activity.create崩溃，会出现黑屏问题，所以如果Activity.create崩溃，必须杀死进程，让APP重启，避免出现改问题。
     - 有没有其他办法可以保证 App 在抛出异常不 crash 的情况下，又能保证不会卡死呢？looper 是查询事件的核心类，那么我们是否可以不让跳出 loop 循环呢。
     - 可以给消息队列发送一个 loop 循环，然后给这个 loop 做一个 try-catch ，一旦外层的 loop 检测到这个事件，就会执行我们自己创建的 loop 循环，这样以后 App 内的所有事件都会在我们自己的 loop 循环中处理。
@@ -477,7 +477,7 @@
     ```
 
 
-### 05.拦截子线程崩溃
+#### 8.5 拦截子线程崩溃
 - 主线程的Looper 发送 loop 循环都是主线程操作的，那么子线程如果抛出异常怎么办呢，这么处理应该也是会 crash ，该怎么处理呢？处理代码如下所示：
     ``` java
     public class MyApplication extends Application {
@@ -531,7 +531,7 @@
         - Thread.setDefaultUncaughtExceptionHandler(handler) 方法如果被多次调用的话，会以最后一次传递的 handler 为准，所以如果用了第三方的统计模块，可能会出现失灵的情况。对于这种情况，在设置默认 hander 之前，可以先通过 getDefaultUncaughtExceptionHandler() 方法获取并保留旧的 hander，然后在默认 handler 的uncaughtException 方法中调用其他 handler 的 uncaughtException 方法，保证都会收到异常信息。
 
 
-### 06.最后的总结建议
+#### 8.6 最后的总结建议
 - 虽然说looper可以拦截主线程，子线程崩溃，还有ANR。但是有一个最大的问题是，让本该出现异常的地方，触发后没有反应，这样可能会导致后续出现大问题。
 - 不过还是看到网上有方案说，有一些源码层级崩溃异常，比如startActivity出现异常，还有开启activity需要flag兼容，以及弹窗show出现崩溃。这种则可以反射处理，在activity生命周期使用handler发送消息导致异常的时候【极少数偶发】，关闭页面。
 
@@ -539,15 +539,15 @@
 
 
 
-### 08.Crash监控和止损
-#### 8.1 Crash的监控
+### 09.Crash监控和止损
+#### 9.1 Crash的监控
 - 在经过前面提到的各种检查和测试之后，应用便开始发布了。建立了如下监控流程，来保证异常发生时能够及时得到反馈并处理。
     - 首先是灰度监控，灰度阶段是增量Crash最容易暴露的阶段，如果这个阶段没有很好的把握住，会使得增量变存量，从而导致Crash率上升。如果条件允许的话，可以在灰度期间制定一些灰度策略去提高这个阶段Crash的暴露。例如分渠道灰度、分城市灰度、分业务场景灰度、新装用户的灰度等等，尽量覆盖所有的分支。
     - 灰度结束之后便开始全量，在全量的过程中我们还需要一些日常Crash监控和Crash率的异常报警来防止突发情况的发生，例如因为后台上线或者运营配置错误导致的线上Crash。
     - 除此之外还需要一些其他的监控，例如，之前提到的大图监控，来避免因为大图导致的OOM。具体的输出形式主要有邮件通知、IM通知、报表。
 
 
-#### 8.2 Crash的止损
+#### 9.2 Crash的止损
 - 在前面做了那么多，但是Crash还是无法避免的
     - 例如，在灰度阶段因为量级不够，有些Crash没有被暴露出来；又或者某些功能客户端比后台更早上线，而这些功能在灰度阶段没有被覆盖到；这些情况下，如果出现问题就需要考虑如何止损了。
 - 问题发生时首先需要评估重要性
@@ -556,7 +556,7 @@
     - 如果问题发生非要发版本，就只能强制用户升级。强制升级因为覆盖周期长，同时影响用户的体验，只在万不得已的情况下才会使用。
 
 
-#### 8.3 Crash的自我修复
+#### 9.3 Crash的自我修复
 - 在做新技术选型时除了要考虑是否能满足业务需求、是否比现有技术更优秀和团队学习成本等因素之外，兼容性和稳定性也非常重要。但面对国内非富多彩的Android系统环境，在体量百万级以上的的App中几乎不可能实现毫无瑕疵的技术方案和组件，所以一般情况下如果某个技术实现方案可以达到0.01‰以下的崩溃率，而其他方案也没有更好的表现，我们就认为它是可以接受的。但是哪怕仅仅十万分之一的崩溃率，也代表还有用户受到影响，而我们认为Crash对用户来说是最糟糕的体验，尤其是涉及到交易的场景，所以我们必须本着每一单都很重要的原则，尽最大努力保证用户顺利执行流程。
 - 实际情况中有一些技术方案在兼容性和稳定性上做了一定妥协的场景，往往是因为考虑到性能或扩展性等方面的优势。这种情况下我们其实可以再多做一些，进一步提高App的可用性。就像很多操作系统都有“兼容模式”或者“安全模式”，很多自动化机械机器都配套有手动操作模式一样，App里也可以实现备用的降级方案，然后设置特定条件的触发策略，从而达到自动修复Crash的目的。
     - 举例来讲，Android 3.0中引入了硬件加速机制，虽然可以提高绘制帧率并且降低CPU占用率，但是在某些机型上还是会有绘制错乱甚至Crash的情况，这时我们就可以在App中记录硬件加速相关的Crash问题或者使用检测代码主动检测硬件加速功能是否正常工作，然后主动选择是否开启硬件加速，这样既可以让绝大部分用户享受硬件加速带来的优势，也可以保障硬件加速功能不完善的机型不受影响。
@@ -569,7 +569,7 @@
 
 
 
-#### 8.4 Crash日志回捞
+#### 9.4 Crash日志回捞
 - 在开发时使用各种工具、措施来避免Crash的发生，但Crash还是不可避免。
     - 线上某些怪异的Crash发生后，我们除了分析Crash堆栈信息之外，还可以使用离线日志回捞、下发动态日志等工具来还原Crash发生时的场景，帮助开发同学定位问题，但是这两种方式都有它们各自的问题。
     - 离线日志顾名思义，它的内容都是预先记录好的，有时候可能会漏掉一些关键信息，因为在代码中加日志一般只是在业务关键点，在大量的普通方法中不可能都加上日志。
