--- a/Read/ReadAndroidWiki/06.消息机制/06.Looper深度解析.md
+++ b/Read/ReadAndroidWiki/06.消息机制/06.Looper深度解析.md
@@ -5,6 +5,7 @@
 - 04.Looper.loop()方法源码分析
 - 06.Activity生命周期依赖Looper
 - 07.Looper死循环为何不阻塞应用卡死
+- 08.Looper停止App就退出吗
 
 
 
@@ -387,6 +388,65 @@
         sThreadLocal.set(new Looper(quitAllowed));
     }
     ```
+
+
+### 08.Looper停止App就退出吗
+- looper如果停止了，那么app会退出吗，先做个实验看一下。代码如下所示
+    - 可以发现调用这句话，是会让app退出的。会报错崩溃日志是：java.lang.IllegalStateException: Main thread not allowed to quit.
+    ``` java
+    Looper.getMainLooper().quit();
+  
+    //下面这种是安全退出
+    if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.JELLY_BEAN_MR2) {
+        Looper.getMainLooper().quitSafely();
+    }
+    ```
+- 然后看一下Looper中quit方法源码
+    - Looper的quit方法源码如下：
+    ``` java
+    public void quit() {
+        mQueue.quit(false);
+    }
+    ```
+    - Looper的quitSafely方法源码如下：
+    ``` java
+    public void quitSafely() {
+        mQueue.quit(true);
+    }
+    ```
+- 以上两个方法中mQueue是MessageQueue类型的对象，二者都调用了MessageQueue中的quit方法，MessageQueue的quit方法源码如下:
+    - 可以发现上面调用了quit方法，即会出现出现崩溃，主要原因是因为调用prepare()-->new Looper(true)--->new MessageQueue(true)--->mQuitAllowed设置为true
+    ``` java
+    void quit(boolean safe) {
+        if (!mQuitAllowed) {
+            throw new IllegalStateException("Main thread not allowed to quit.");
+        }
+
+        synchronized (this) {
+            if (mQuitting) {
+                return;
+            }
+            mQuitting = true;
+
+            if (safe) {
+                removeAllFutureMessagesLocked();
+            } else {
+                removeAllMessagesLocked();
+            }
+
+            // We can assume mPtr != 0 because mQuitting was previously false.
+            nativeWake(mPtr);
+        }
+    }
+    ```
+- 通过观察以上源码我们可以发现:
+    - 当我们调用Looper的quit方法时，实际上执行了MessageQueue中的removeAllMessagesLocked方法，该方法的作用是把MessageQueue消息池中所有的消息全部清空，无论是延迟消息（延迟消息是指通过sendMessageDelayed或通过postDelayed等方法发送的需要延迟执行的消息）还是非延迟消息。
+    - 当我们调用Looper的quitSafely方法时，实际上执行了MessageQueue中的removeAllFutureMessagesLocked方法，通过名字就可以看出，该方法只会清空MessageQueue消息池中所有的延迟消息，并将消息池中所有的非延迟消息派发出去让Handler去处理，quitSafely相比于quit方法安全之处在于清空消息之前会派发所有的非延迟消息。
+    - 无论是调用了quit方法还是quitSafely方法只会，Looper就不再接收新的消息。即在调用了Looper的quit或quitSafely方法之后，消息循环就终结了，这时候再通过Handler调用sendMessage或post等方法发送消息时均返回false，表示消息没有成功放入消息队列MessageQueue中，因为消息队列已经退出了。
+    - 需要注意的是Looper的quit方法从API Level 1就存在了，但是Looper的quitSafely方法从API Level 18才添加进来。
+
+
+
 
 
 
