--- a/Read/ReadShareWiki/00.综合专项/01.技术设计文档.md
+++ b/Read/ReadShareWiki/00.综合专项/01.技术设计文档.md
@@ -1,24 +1,35 @@
 #### 目录介绍
-- 概述
-    - 项目背景
-    - 设计目标
-- 方案设计
-    - 整体架构
-        - 架构设计图
-        - UML设计图
-    - 功能设计
-        - 关键流程图
-        - 接口设计图
-        - 模块间依赖关系
-- 其他设计（Optional）
-    - 性能设计
-    - 稳定性设计
-    - 灰度设计
-    - 降级设计
-    - 异常设计
-- 排期与计划
-    - 排期节点
-    - 落实反馈
+- 01.整体概述
+    - 1.1 项目背景
+    - 1.2 遇到问题
+    - 1.3 基础概念介绍
+    - 1.4 设计目标
+    - 1.5 产生收益分析
+- 02.核心技术点
+    - 2.1 技术点梳理
+    - 2.2 困难点说明
+    - 2.3 
+- 03.方案设计思路
+    - 3.1 技术调研分析
+    - 3.2 方案对比论述
+    - 3.3 总体设计思路
+- 05.方案基础设计
+    - 5.1 整体架构图
+    - 5.2 UML设计图
+    - 5.3 关键流程图
+    - 5.4 接口设计图
+    - 5.5 模块间依赖关系
+- 06.其他设计说明
+    - 6.1 性能设计
+    - 6.2 稳定性设计
+    - 6.3 灰度设计
+    - 6.4 降级设计
+    - 6.5 异常设计
+    - 6.6 自测case设计
+- 07.排期与计划
+    - 7.1 排期节点
+    - 7.2 落实反馈
+
 
 
 ### 01.概述
@@ -36,7 +47,7 @@
 ### 02.方案设计
 - 方案设计是技术文档的最核心部分，主要包括了整体架构和功能设计，这里需要体现：
 - 设计的初衷：概要描述方案设计的思考，可以是为了扩展性的考虑，可以是提升性能
-关键技术点的思考：描述关键技术选型的思考，比如要解耦，业内解耦方案能有router、Target-Action等，讲清楚选择的思考
+- 关键技术点的思考：描述关键技术选型的思考，比如要解耦，业内解耦方案能有router、SPI等，讲清楚选择的思考
 - 技术上的折中/取舍：在做技术设计的时候，往往要的很多，但时间有限，那么这个需要讲一下折中与取舍，以及接下来的规划、计划
 
 
