--- a/Read/ReadShareWiki/00.综合专项/02.技术复盘专项.md
+++ b/Read/ReadShareWiki/00.综合专项/02.技术复盘专项.md
@@ -9,11 +9,11 @@
     - 3.1 事故定的级别
 - 04.事故回放
     - 4.1 时间线
-    - 4.2 事故处理过程总结
-        - 问题发生时间
-        - 问题发现时间
-        - 问题定位时间
-        - 问题止损时间
+    - 4.2 问题发生时间
+    - 4.3 问题发现时间
+    - 4.4 问题定位时间
+    - 4.5 问题止损时间
+    - 4.6 事故处理过程总结
 - 05.问题原因分析
     - 5.1 直接原因
     - 5.2 根本原因
