--- a/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
+++ b/Read/ReadShareWiki/00.综合专项/01.个人简历复习.md
@@ -234,11 +234,14 @@ APUS               下午2点-3点，二面过，说还有技术面
 
 
 3月25日
-搜狐视频            上午11点-12点，二面
+搜狐视频            上午11点-12点，二面，过
 知乎               下午4点-5点
 
 
-过了两家：作业帮，极客邦，VipKid，开课吧，货拉拉
+过了两家：作业帮，极客邦，VipKid，开课吧，货拉拉，长城汽车，搜狐视频
+32x16=51.2
+33x14=46.2
+31x13=
 
 23号
 爱康国宾体检
