--- a/Read/ReadShareWiki/00.综合专项/07.时间管理模板.md
+++ b/Read/ReadShareWiki/00.综合专项/07.时间管理模板.md
@@ -1,8 +1,8 @@
 #### 目录介绍
-- 时间管理背景
-    - 背景说明
-    - GTD管理
-- 收集信息
+- 01.时间管理背景
+    - 1.1 背景说明
+    - 1.2 GTD管理
+- 02.收集信息
     - 清空大脑
     - 联想
     - 收集信息
@@ -17,10 +17,17 @@
     - 每周优选三件事
     - 每日优选三件事
 - 坚决执行
+    - 执行方案
+    - 执行措施
 - 回顾检查
+    - 反馈结果
+    - 复盘总结
 
 
-#### GTD管理
+
+
+### 01.时间管理背景
+#### GTD时间管理
 - "GTD（Getting Things Done），意思是“把需要做的事情处理好”。GTD时间管理法的核心理念在于清空大脑，然后一步步按照设定的路线去努力执行。"
 
 
