--- a/Read/ReadJavaWiki/02.类和对象/09.类初始化原理分析.md
+++ b/Read/ReadJavaWiki/02.类和对象/09.类初始化原理分析.md
@@ -22,7 +22,8 @@
 
 
 ### 01.如何构造对象
-- 用构造器确保初始化。在Java中，通过提供构造器，类的设计者可确保每个对象都会得到初始化。Java 会保证初始化的进行。
+- 用构造器确保初始化。
+    - 在Java中，通过提供构造器，类的设计者可确保每个对象都会得到初始化。Java 会保证初始化的进行。
 - 构造器采用与类相同的名称。
     - 由于构造器的名称必须与类名完全相同，所以“每个方法首字母小写”的风格在这里不适用。
     - 构造器方法可以有参数，这样可以在初始化对象时提供实际参数。
