--- a/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
+++ b/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
@@ -43,7 +43,7 @@
 - 【泛型】那些地方用到了泛型，为什么要用泛型？怎么获得泛型的具体的类？什么是泛型擦除呢？泛型和反射有什么联系？
 - 【泛型】如何编写一个泛型方法，让它能接受泛型参数并返回泛型类型？你可以把List<String>传递给一个接受List<Object>参数的方法吗？Java中List<?>和List<Object>之间的区别是什么?
 - 【泛型与反射】通过反射获得泛型的实际类型参数？父类子类使用泛型，其中使用泛型需要注意什么问题？
-
+- 【二进制】浮点型在二进制中如何表示，为何会出现精度丢失，从存储角度分析一下
 
 
 #### 1.2 类和对象
@@ -51,6 +51,7 @@
 - 【继承】继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
 - 【抽象类与接口】接口是否可继承(extends)接口? 抽象类是否可实现(implements)接 口? 抽象类是否可继承具体类(concrete class)?
 - 【面向对象】面向对象有哪些特征？继承，封装，多态，可以随意抽一个问细节？接口和抽象类有什么区别？
+- 【思想】说一下面向切面编程的思想
 
 
 
