MVVM修改app:items编译警告提示报错问题

--- a/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
+++ b/Read/ReadShareWiki/00.综合专项/00.面试刷题复习.md
@@ -51,8 +51,8 @@
 - 【继承】继承（Inheritance）与聚合（Aggregation）的区别在哪里？为什么类只能单继承，接口可以多继承？
 - 【抽象类与接口】接口是否可继承(extends)接口? 抽象类是否可实现(implements)接 口? 抽象类是否可继承具体类(concrete class)?
 - 【面向对象】面向对象有哪些特征？继承，封装，多态，可以随意抽一个问细节？接口和抽象类有什么区别？
-- 【思想】说一下面向切面编程的思想
-- 【初始化】说一下什么是静态绑定和动态绑定，作用时机，
+- 【思想】说一下面向切面编程的思想，结合一个具体案例说一下
+- 【初始化】说一下什么是静态绑定和动态绑定，作用时机
 
 
 #### 1.3 IO流
